--- a/frontend/book.html
+++ b/frontend/book.html
@@ -1,24 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BookView - All Books</title>
+    <title>BookView - Explore Books</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 
     <style>
-        /* Book Page Styling */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: 'Poppins', sans-serif;
+        }
+
+        body {
+            background: linear-gradient(to right, #ff9a9e, #fad0c4);
+            color: #333;
+            text-align: center;
+            min-height: 100vh;
+            display: flex;
+            flex-direction: column;
+        }
+
+        header {
+            display: flex;
+            justify-content: space-between;
+            padding: 20px;
+            background: rgba(255, 255, 255, 0.9);
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            position: fixed;
+            width: 100%;
+            top: 0;
+            left: 0;
+            z-index: 1000;
+        }
+
+        header h1 {
+            font-size: 24px;
+        }
+
+        nav ul {
+            list-style: none;
+            display: flex;
+            gap: 20px;
+        }
+
+        nav a {
+            text-decoration: none;
+            color: #333;
+            font-weight: 600;
+            transition: 0.3s;
+        }
+
+        nav a:hover {
+            color: #ff9a9e;
+        }
+
         .books-container {
             margin-top: 100px;
             padding: 40px;
             text-align: center;
+            flex: 1;
         }
 
         .books-container h2 {
-            font-size: 36px;
-            margin-bottom: 20px;
+            font-size: 30px;
+            margin-bottom: 25px;
             animation: fadeIn 2s ease-in-out;
         }
 
@@ -27,6 +76,7 @@
             grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
             gap: 20px;
             justify-content: center;
+            padding: 20px;
         }
 
         .book-card {
@@ -35,11 +85,13 @@
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             text-align: left;
-            transition: transform 0.3s ease-in-out;
+            transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+            animation: fadeIn 1s ease-in-out;
         }
 
         .book-card:hover {
             transform: scale(1.05);
+            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
         }
 
         .book-card img {
@@ -82,6 +134,81 @@
             margin-top: 5px;
         }
 
+        .add-book-btn {
+            padding: 10px 20px;
+            background: #ff9a9e;
+            border: none;
+            color: white;
+            font-size: 18px;
+            cursor: pointer;
+            border-radius: 5px;
+            transition: 0.3s;
+            margin-bottom: 20px;
+        }
+
+        .add-book-btn:hover {
+            background: #ff7e8b;
+        }
+
+        .modal {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.5);
+            display: none;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .form-box {
+            background: white;
+            padding: 20px;
+            border-radius: 10px;
+            width: 400px;
+            text-align: center;
+        }
+
+        .form-box input,
+        .form-box textarea {
+            width: 100%;
+            padding: 10px;
+            margin: 10px 0;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+
+        .form-box button {
+            padding: 10px 20px;
+            background: #ff9a9e;
+            border: none;
+            color: white;
+            cursor: pointer;
+            transition: 0.3s;
+        }
+
+        .form-box button:hover {
+            background: #ff7e8b;
+        }
+
+        .close-modal {
+            position: absolute;
+            top: 10px;
+            right: 15px;
+            background: none;
+            border: none;
+            font-size: 20px;
+            cursor: pointer;
+        }
+
+        footer {
+            margin-top: 50px;
+            padding: 20px;
+            background: rgba(255, 255, 255, 0.9);
+            width: 100%;
+        }
+
         /* Animations */
         @keyframes fadeIn {
             from {
@@ -113,10 +240,25 @@
 
     <section class="books-container">
         <h2>📖 Explore Our Books</h2>
-        <div class="books-grid" id="books-grid">
-            <!-- Books will be loaded here dynamically -->
-        </div>
+        <button class="add-book-btn hidden" id="add-book-btn">➕ Add Book</button>
+        <div class="books-grid" id="books-grid"></div>
     </section>
+
+    <div class="modal" id="add-book-modal">
+        <div class="form-box">
+            <button class="close-modal" id="close-modal">&times;</button>
+            <h2>Add a New Book</h2>
+            <form id="add-book-form">
+                <input type="text" id="title" placeholder="Title" required>
+                <input type="text" id="author" placeholder="Author" required>
+                <textarea id="description" placeholder="Description" required></textarea>
+                <input type="number" id="rating" placeholder="Average Rating" required>
+                <input type="date" id="publishedDate" required>
+                <input type="file" id="image" required>
+                <button type="submit">Add Book</button>
+            </form>
+        </div>
+    </div>
 
     <footer>
         <p>© 2025 BookView | Share your book insights and discover new perspectives</p>
@@ -126,23 +268,39 @@
 <script>
     document.addEventListener("DOMContentLoaded", async () => {
         const booksGrid = document.getElementById("books-grid");
-
-        // ✅ Get JWT token from localStorage
+        const addBookBtn = document.getElementById("add-book-btn");
         const token = localStorage.getItem("jwtToken");
+        const userRole = localStorage.getItem("userRole");
+
+        console.log("User Role:", userRole); // Debugging
+
         if (!token) {
             alert("Please login first!");
-            window.location.href = "index.html"; // Redirect to login page
+            window.location.href = "login.html";
             return;
         }
 
+        // ✅ Show "Add Book" button only for Admins
+        if (userRole === "ADMIN") {
+            addBookBtn.classList.remove("hidden");
+        }
+
+        // ✅ Load Books from API
         try {
             const response = await fetch("http://localhost:8081/api/book", {
                 method: "GET",
                 headers: {
-                    "Authorization": `Bearer ${token}`, // ✅ Send JWT Token
+                    "Authorization": `Bearer ${token}`,
                     "Content-Type": "application/json"
                 }
             });
+
+            if (response.status === 401) {
+                alert("Session expired. Please login again.");
+                localStorage.removeItem("jwtToken");
+                window.location.href = "login.html";
+                return;
+            }
 
             if (!response.ok) {
                 throw new Error("Unauthorized access. Please login again.");
@@ -153,19 +311,18 @@
                 const bookCard = document.createElement("div");
                 bookCard.classList.add("book-card");
 
-                // ✅ Convert Byte Array to Base64
                 const imageSrc = `data:${book.imageType};base64,${convertByteArrayToBase64(book.imageData)}`;
 
                 bookCard.innerHTML = `
-                <img src="${imageSrc}" alt="${book.title}">
-                <div class="book-info">
-                    <p class="book-title">${book.title}</p>
-                    <p class="book-author">By ${book.author}</p>
-                    <p class="book-rating">⭐ ${book.averageRating}</p>
-                    <p class="book-description">${book.description.substring(0, 100)}...</p>
-                    <p class="book-date">📅 Published: ${book.publishedDate}</p>
-                </div>
-            `;
+                    <img src="${imageSrc}" alt="${book.title}">
+                    <div class="book-info">
+                        <p class="book-title">${book.title}</p>
+                        <p class="book-author">By ${book.author}</p>
+                        <p class="book-rating">⭐ ${book.averageRating}</p>
+                        <p class="book-description">${book.description.substring(0, 100)}...</p>
+                        <p class="book-date">📅 Published: ${book.publishedDate}</p>
+                    </div>
+                `;
 
                 booksGrid.appendChild(bookCard);
             });
@@ -173,24 +330,60 @@
             console.error("Error fetching books:", error);
             booksGrid.innerHTML = "<p>Failed to load books. Please try again later.</p>";
         }
+
+        // ✅ Handle "Add Book" Modal
+        addBookBtn.addEventListener("click", () => {
+            document.getElementById("add-book-modal").style.display = "flex";
+        });
+
+        document.getElementById("close-modal").addEventListener("click", () => {
+            document.getElementById("add-book-modal").style.display = "none";
+        });
+
+        // ✅ Handle Book Submission
+        document.getElementById("add-book-form").addEventListener("submit", async function (event) {
+            event.preventDefault();
+
+            if (userRole !== "ADMIN") {
+                alert("⚠️ You do not have permission to add books.");
+                return;
+            }
+
+            const formData = new FormData();
+            formData.append("title", document.getElementById("title").value);
+            formData.append("author", document.getElementById("author").value);
+            formData.append("description", document.getElementById("description").value);
+            formData.append("averageRating", document.getElementById("rating").value);
+            formData.append("publishedDate", document.getElementById("publishedDate").value);
+            formData.append("image", document.getElementById("image").files[0]);
+
+            try {
+                const response = await fetch("http://localhost:8081/api/book", {
+                    method: "POST",
+                    headers: {
+                        "Authorization": `Bearer ${token}`
+                    },
+                    body: formData
+                });
+
+                if (response.ok) {
+                    alert("✅ Book added successfully!");
+                    window.location.reload();
+                } else {
+                    alert("⚠️ Failed to add book.");
+                }
+            } catch (error) {
+                console.error("Error adding book:", error);
+            }
+        });
+
     });
 
-
+    // ✅ Convert Byte Array to Base64
     function convertByteArrayToBase64(byteArray) {
         return btoa(String.fromCharCode(...new Uint8Array(byteArray)));
     }
-
-    // Convert Byte Array to Base64 for Image
-    function arrayBufferToBase64(buffer) {
-        let binary = '';
-        let bytes = new Uint8Array(buffer);
-        let len = bytes.byteLength;
-        for (let i = 0; i < len; i++) {
-            binary += String.fromCharCode(bytes[i]);
-        }
-        return btoa(binary);
-    }
-
 </script>
+
 
 </html>
