UI for showing details of individual book

--- a/frontend/book.html
+++ b/frontend/book.html
@@ -337,7 +337,7 @@
         </div>
     `;
 
-        // ✅ Clicking a book redirects to its details page
+        //Clicking a book redirects to its details page
         bookCard.addEventListener("click", () => {
             window.location.href = `book-details.html?bookId=${book.bookId}`;
         });
