--- a/frontend/login.html
+++ b/frontend/login.html
@@ -266,7 +266,7 @@
             <div class="form-container">
                 <h2 id="form-title">Login</h2>
                 <form id="login-form">
-                    <input type="text" id="login-username" placeholder="Username" required>
+                    <input type="text" id="login-email" placeholder="Email" required>
                     <input type="password" id="login-password" placeholder="Password" required>
                     <button type="submit">Login</button>
                     <p>New user? <span id="switch-register">Register</span></p>
@@ -317,7 +317,7 @@
     document.getElementById("login-form").addEventListener("submit", async function (event) {
         event.preventDefault(); // Prevent page reload
 
-        const username = document.getElementById("login-username").value;
+        const email = document.getElementById("login-email").value;
         const password = document.getElementById("login-password").value;
 
         const response = await fetch("http://localhost:8081/api/login", {
@@ -325,7 +325,7 @@
             headers: {
                 "Content-Type": "application/json"
             },
-            body: JSON.stringify({ username, password })
+            body: JSON.stringify({ email, password })
         });
 
         const result = await response.json(); 
@@ -334,6 +334,8 @@
            // alert("Login successful!");
             localStorage.setItem("jwtToken", result.token); // Store JWT token for future requests
             localStorage.setItem("userRole", result.role);
+            localStorage.setItem("userId", result.userId);
+
             window.location.href = "book.html";
         } else {
             alert("Invalid username or password!");
