--- a/frontend/book-details.html
+++ b/frontend/book-details.html
@@ -57,7 +57,8 @@
         }
 
         .container {
-            max-width: 900px;
+            max-width: 1100px;
+            min-width: 750px;
             margin: 120px auto 50px;
             padding: 20px;
             background: white;
@@ -65,15 +66,15 @@
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
             display: flex;
             align-items: flex-start;
-            gap: 20px;
-            flex-grow: 1;
             flex-direction: column;
         }
 
         .book-content {
             display: flex;
-            align-items: flex-start;
-            gap: 20px;
+            align-items: center;
+            gap: 40px;
+            width: 100%;
+            padding: 20px;
         }
 
         .book-image-container {
@@ -82,19 +83,29 @@
         }
 
         .book-image-container img {
-            width: 250px;
-            height: 350px;
+            width: 320px;
+            height: 450px;
             object-fit: cover;
             border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            background: white;
         }
 
         .book-details {
             flex: 2;
             text-align: left;
+            background: #f8f8f8;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
         }
 
         .book-details h2 {
             margin-top: 0;
+        }
+
+        .book-details p {
+            margin: 5px 0;
         }
 
         .admin-buttons {
@@ -108,6 +119,8 @@
             border: none;
             cursor: pointer;
             border-radius: 5px;
+            font-size: 14px;
+            transition: 0.3s;
         }
 
         .btn-update {
@@ -120,7 +133,12 @@
             color: white;
         }
 
+        .btn:hover {
+            opacity: 0.8;
+        }
+
         .reviews-section {
+            width: 100%;
             margin-top: 30px;
             padding: 20px;
             background: white;
@@ -129,11 +147,18 @@
         }
 
         .review {
-            padding: 10px;
-            margin: 10px 0;
+            padding: 15px;
+            margin: 15px 0;
             background: #f8f8f8;
-            border-radius: 5px;
-            text-align: left;
+            border-radius: 10px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
+
+        .review .review-username {
+            font-size: 14px;
+            font-weight: bold;
+            color: #777;
+            margin-bottom: 5px;
         }
 
         .review p {
@@ -141,6 +166,7 @@
         }
 
         .add-review-form {
+            width: 100%;
             margin-top: 20px;
             padding: 20px;
             background: white;
@@ -164,6 +190,30 @@
             border: none;
             border-radius: 5px;
             cursor: pointer;
+            transition: 0.3s;
+        }
+
+        .add-review-form button:hover {
+            background: #388E3C;
+        }
+
+        .back-button {
+            display: block;
+            width: 200px;
+            margin: 20px auto;
+            padding: 10px;
+            background: #555;
+            color: white;
+            text-align: center;
+            border-radius: 5px;
+            cursor: pointer;
+            text-decoration: none;
+            font-weight: bold;
+            transition: 0.3s;
+        }
+
+        .back-button:hover {
+            background: #444;
         }
 
         footer {
@@ -192,9 +242,6 @@
 
     <div class="container">
         <div class="book-content">
-            <div class="book-image-container">
-                <img id="book-image" src="" alt="Book Image">
-            </div>
 
             <div class="book-details">
                 <h2 id="book-title"></h2>
@@ -208,6 +255,11 @@
                     <button class="btn btn-delete hidden" id="delete-book">Delete</button>
                 </div>
             </div>
+
+            <div class="book-image-container">
+                <img id="book-image" src="" alt="Book Image">
+            </div>
+            
         </div>
 
         <div class="reviews-section">
@@ -221,17 +273,23 @@
             <textarea id="review-comment" placeholder="Write your review here..." required></textarea>
             <button id="submit-review">Submit Review</button>
         </div>
+
+        <a href="book.html" class="back-button">← Back to Books</a>
     </div>
 
     <footer>
         <p>© 2025 BookView | Share your book insights and discover new perspectives</p>
     </footer>
 
+
     <script>
         document.addEventListener("DOMContentLoaded", async () => {
             const params = new URLSearchParams(window.location.search);
             const bookId = params.get("bookId");
             const token = localStorage.getItem("jwtToken");
+            const userId=localStorage.getItem("userId");
+
+            
 
             // Fetch and display book details and reviews...
             const userRole = localStorage.getItem("userRole");
@@ -275,28 +333,45 @@
             }
 
             // Fetch Reviews
-            try {
-                const reviewResponse = await fetch(`http://localhost:8081/api/review/${bookId}`, {
-                    method: "GET",
-                    headers: { "Authorization": `Bearer ${token}` }
-                });
+try {
+    const reviewResponse = await fetch(`http://localhost:8081/api/review/${bookId}`, {
+        method: "GET",
+        headers: { "Authorization": `Bearer ${token}` }
+    });
 
-                if (reviewResponse.ok) {
-                    const reviews = await reviewResponse.json();
-                    const reviewContainer = document.getElementById("reviews-container");
+    if (reviewResponse.ok) {
+        const reviews = await reviewResponse.json();
+        const reviewContainer = document.getElementById("reviews-container");
 
-                    reviews.forEach(review => {
-                        const reviewDiv = document.createElement("div");
-                        reviewDiv.classList.add("review");
-                        reviewDiv.innerHTML = `<p><strong>Rating:</strong> ${review.rating} ⭐</p>
-                                       <p><strong>Comment:</strong> ${review.comment}</p>
-                                       <p><small>📅 ${review.createdDate}</small></p>`;
-                        reviewContainer.appendChild(reviewDiv);
-                    });
-                }
-            } catch (error) {
-                console.error("Error fetching reviews:", error);
+        reviews.forEach(async (review) => {
+            // Fetch the username for each review's userId
+            const usernameResponse = await fetch(`http://localhost:8081/api/review/userName/${review.userId}`, {
+                method: "GET",
+                headers: { "Authorization": `Bearer ${token}` }
+            });
+
+            let username = "Unknown"; // Default if username is not found
+            if (usernameResponse.ok) {
+                username = await usernameResponse.text(); // Get username as plain text
             }
+
+            // Create the review HTML element
+            const reviewDiv = document.createElement("div");
+            reviewDiv.classList.add("review");
+            reviewDiv.innerHTML = `
+                <p><strong>Name:</strong> ${username}</p>
+                <p><strong>Rating:</strong> ${review.rating} ⭐</p>
+                <p><strong>Comment:</strong> ${review.comment}</p>
+                <p><small>📅 ${review.createdDate}</small></p>
+            `;
+
+            reviewContainer.appendChild(reviewDiv);
+        });
+    }
+} catch (error) {
+    console.error("Error fetching reviews:", error);
+}
+
 
             // Show Update & Delete Buttons for Admin
             if (userRole === "ADMIN") {
@@ -337,7 +412,7 @@
 
                 const reviewData = {
                     bookId: bookId,
-                    userId: localStorage.getItem("userId"),
+                    userId: userId,
                     rating: rating,
                     comment: comment,
                     createdDate: new Date().toISOString()
